--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: vifonne <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/11/06 19:05:19 by vifonne           #+#    #+#              #
-#    Updated: 2018/11/20 15:09:16 by vifonne          ###   ########.fr        #
+#    Updated: 2018/11/22 15:26:44 by vifonne          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,7 +30,7 @@ SRCS		=		ft_memcpy.c			ft_bzero.c			ft_memset.c		\
 					ft_itoa.c			ft_strdjoin.c		ft_create_elem.c\
 					ft_list_pushback.c	ft_list_pushfront.c get_next_line.c	\
 					ft_print_tab_str.c	ft_print_tab_int.c	ft_max.c		\
-					ft_sqrt.c
+					ft_sqrt.c			ft_split.c
 
 OBJ			=		$(SRCS:.c=.o)
 CC			=		gcc -Wall -Wextra -Werror
